GitHub: Implemented changelog generation
Fixes gh-1

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "colors": "0.6.2",
-    "shelljs": "0.2.6"
+    "shelljs": "0.2.6",
+    "github-request": "1.1.0"
   },
   "devDependencies": {
     "grunt": "0.4.1",
